[package]
name = "archiver-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
reqwest = "0.11.23"
bytes = "1.5"
serde_json = "1.0.108"
dirs = "5.0.1"
regex = "1.10.2"
substring = "1.4.5"
scraper = "0.18.1"
lazy_static = "1.4.0"
chrono = "0.4.31"
rand = "0.8.5"
image = "0.24.6"
tokio = { version = "1.35", features = ["full"] }
